--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div id="text">
                 <div id="code">
                     <span class="say">My beautiful wife 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May Allah bless you 🍀</span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">I loved you ❤️</span><br>
+                    <span class="say">Sorry sorry sorry</span><br>
+                    <span class="say"> Ar jibone emon korbo na sorry </span><br>
+                    <span class="say">plzz sorry sorry</span><br>
+                    <span class="say">I love you ❤️</span><br>
                     <span class="say">And I will always love u 🥺 ❤️</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    <span class="say">ummmmmmmmmmmmmmmmmaaaaaaaaaaaaaahhhhhhhhhhhhhhhh😘😘</span><br>
                 </div>
             </div>
             <div id="clock-box">
